--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,410 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  overflow: hidden;
+  background-color: #0d0e14;
+}
+
+.navbar {
+  background-color: #152028;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2) !important;
+  margin-bottom: 60px;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
+}
+
+.navbar ul {
+  display: flex;
+  align-items: center;
+  background: #152028 !important;
+}
+
+.ant-menu-item-selected {
+  background-color: transparent !important;
+}
+
+.ant-menu-item-selected a {
+  color: #0ee6be !important;
+  font-weight: bold;
+}
+
+.main {
+  width: 100%;
+}
+
+.routes {
+  padding: 20px;
+  background-color: #0d0e14;
+}
+
+body {
+  background: #0d0e14 !important;
+}
+
+.nav-container {
+  position: fixed;
+  top: 0;
+  border-bottom: #0ee6be 2px solid;
+  display: flex;
+  width: 100%;
+  padding: 8px 10px;
+  margin: 0px;
+  background-color: #152028;
+  z-index: 100 !important;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.logo {
+  margin-left: 15px;
+  margin-bottom: 0 !important;
+  line-height: 30px !important;
+}
+
+.logo a {
+  color: #0ee6be;
+}
+
+.menu-control-container {
+  display: none !important;
+  font-size: 1.2rem !important;
+  background-color: #0ee6be !important;
+  border: none !important;
+}
+
+.loader {
+  height: 81vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ant-spin-dot-item {
+  background-color: #0ee6be;
+}
+
+h2.ant-typography,
+h4.ant-typography,
+h3.ant-typography,
+.ant-statistic-title,
+.ant-statistic-content,
+.price-change,
+.current-price,
+.coin-stats-name span {
+  color: #fff !important;
+}
+
+.ant-typography a,
+.ant-typography a:hover {
+  color: #0ee6be;
+}
+
+.ant-card-head,
+.ant-card-body,
+.ant-card {
+  background: #171d24;
+  color: #fff;
+}
+
+.ant-card-head {
+  border-bottom: 3px solid #101216;
+}
+
+.ant-card {
+  border: none;
+}
+
+@media screen and (max-width: 800px) {
+  .app {
+    flex-direction: column;
+    overflow: hidden;
+  }
+
+  .navbar {
+    flex: 1;
+    margin-bottom: 50px;
+  }
+
+  .navbar ul {
+    display: block;
+  }
+
+  .ant-menu-item-selected {
+    border-bottom: none;
+  }
+
+  .nav-container {
+    display: flex !important;
+    width: 100%;
+    z-index: 100;
+    background-color: #152028;
+  }
+
+  .menu-control-container {
+    display: flex !important;
+    align-items: center;
+  }
+
+  .ant-menu {
+    position: absolute;
+    right: 0px;
+    top: 55px;
+  }
+
+  .home-title {
+    font-size: 1.4rem !important;
+  }
+
+  .show-more {
+    font-size: 1.3rem !important;
+  }
+}
+
+.coin-detail-container {
+  margin: 30px;
+}
+
+.coin-heading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  gap: 10px;
+}
+
+.coin-heading-container .coin-name {
+  font-weight: 900;
+}
+
+.coin-heading-container p {
+  font-size: 1rem;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  color: #fff;
+}
+
+.stats-container h2 {
+  font-weight: 700;
+  font-size: 1.4rem;
+  margin-top: 20px;
+}
+
+.coin-details-heading {
+  font-weight: 700 !important;
+  margin-top: 20px !important;
+}
+
+.coin-stats {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1rem;
+  opacity: 0.9;
+  padding: 20px;
+}
+
+.coin-stats-name {
+  display: flex;
+  gap: 10px;
+  font-size: 1rem;
+}
+
+.stats {
+  color: #fff;
+  font-weight: 800;
+}
+
+.coin-value-statistics-heading p {
+  font-size: 1rem;
+  opacity: 0.9;
+}
+
+.coin-desc-link {
+  display: flex;
+  gap: 40px;
+  margin-top: 40px;
+  padding-top: 20px;
+}
+
+.coin-desc-link h2 {
+  font-weight: 700;
+}
+
+.coin-desc-link p {
+  font-size: 1rem;
+  opacity: 0.9;
+}
+
+.coin-desc-link h3 {
+  font-weight: 700;
+}
+
+.coin-desc {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.coin-links {
+  padding: 0px 20px;
+  flex: 0.5;
+}
+
+.coin-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.link-name {
+  text-transform: capitalize;
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .stats-container {
+    flex-direction: column;
+  }
+
+  .coin-desc-link {
+    flex-direction: column;
+  }
+
+  .stats-container h2 {
+    margin-top: 0px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .coin-links {
+    padding: 0px;
+  }
+
+  .coin-detail-container {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .heading {
+    margin-top: 20px;
+  }
+}
+
+.select-news {
+  width: 180px;
+}
+
+.news-card {
+  min-height: 500px;
+  max-height: fit-content;
+}
+
+.news-image-container {
+  display: flex !important;
+  justify-content: space-between !important;
+}
+
+.news-image-container img {
+  width: 100%;
+  margin-bottom: 13px;
+}
+
+.news-card a {
+  color: #0ee6be;
+}
+
+.provider-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.chart-header {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.price-container {
+  display: flex !important;
+  gap: 20px !important;
+  align-items: center !important;
+  flex-wrap: wrap !important;
+}
+
+.price-change {
+  font-weight: 900 !important;
+}
+
+.current-price {
+  margin-top: 0px !important;
+  font-weight: 900 !important;
+}
+
+.home-heading-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.show-more {
+  margin-top: 0px !important;
+}
+
+.exchange-image {
+  margin: 0px 10px !important;
+}
+
+.search-crypto {
+  margin: 20px auto 30px;
+  width: 250px;
+}
+
+.search-crypto input {
+  color: white;
+  background-color: transparent;
+  outline: none !important;
+  border: #fff solid 1px !important;
+}
+
+.search-crypto input:focus {
+  box-shadow: none;
+}
+
+.crypto-card-container {
+  min-height: 65vh !important;
+}
+
+.crypto-card {
+  min-width: 250px;
+}
+
+.crypto-card .crypto-image {
+  width: 35px;
+}
+
+.select-timeperiod {
+  width: 200px !important;
+  margin: 20px auto !important;
 }
